resolved too small cta and added css animation

--- a/css/style.css
+++ b/css/style.css
@@ -338,10 +338,15 @@ body .mobile-nav-overlay.is-active {
     z-index: 1000;
     width: 50px;
     height: 50px;
-    opacity: 0;
-    transition: opacity 0.5s ease;
     display: flex;
     align-items: center;
+    opacity: 0; 
+    animation: fadeIn 1s ease forwards 2s; 
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 .bottom-left { 
